--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-firebase-hooks": "^3.0.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
