--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "autoprefixer": "10.4.7",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
+    "install": "0.13.0",
+    "npm": "8.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
