--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "10.4.7",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.8.1",
+    "bootstrap": "^5.2.0",
+    "firebase": "^9.9.3",
     "install": "0.13.0",
-    "npm": "8.10.0",
+    "npm": "^8.18.0",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -49,6 +49,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
