--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.8",
     "reactjs-popup": "^2.0.5",
+    "use-file-picker": "^1.5.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
