--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer": "10.4.7",
     "bootstrap": "^5.2.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.9.3",
     "install": "0.13.0",
     "npm": "^8.18.0",
@@ -20,6 +21,7 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.8",
